packages/typ/tests/fixtures/diagnostics/0730_fcm_hidden_value_to_int_consumer_07.ml.infer.expected
File "0730_fcm_hidden_value_to_int_consumer_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0730_fcm_hidden_value_to_int_consumer_07 is not a valid module name.

File "0730_fcm_hidden_value_to_int_consumer_07.ml", line 10, characters 18-25:
10 |   consume_int_eta M.value
                       ^^^^^^^
Error: The value M.value has type M.t but an expression was expected of type
         int
