packages/typ/tests/fixtures/diagnostics/0730_fcm_hidden_value_to_int_consumer_07.ml
module type Box_eta = sig
  type t
  val value : t
end

let consume_int_eta (x : int) = x

let bad_eta p =
  let module M = (val p : Box_eta) in
  consume_int_eta M.value
